--- a/src/index.css
+++ b/src/index.css
@@ -38,8 +38,7 @@ body{
     gap: .3rem;
     width: 210px;
     padding: .5rem 0;
-    border-right: 1px solid rgba(191, 191, 191, 0.823);
-    border-radius: 7px 0 0 7px;
+    border-radius: 7px 7px 0 0;
 }
 
 .selected{
@@ -49,10 +48,13 @@ body{
 
 /* APP */
 .colorsAndMore{
-    width: 90vw;
-    margin: 1rem 0 .5rem  0;
+    display:flex;
+    flex-direction:column;
+    width: 210px;
+    height:561px;
     background-color: white;
     border-radius: 7px;
+    margin-right:1rem;
 }
 
 .bxsh{
@@ -72,10 +74,20 @@ body{
 .app-bg{
     background-color:#D9D9D9; 
     z-index: 2;
+    height:calc(100vh - 81px);
+    
 }
 .canvas-bg{
     background-color: white;
     border-radius: 10px;
     cursor: url('/imgs/pencil.png'), auto;
 
+}
+
+.tools:hover{
+    cursor:pointer;
+    user-select: none;
+}
+.selectioned{
+    box-shadow: 0 0 10px black;
 }
